--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 }
 
 dependencies {
-    compile 'io.netty:netty-all:5.0.0.Alpha2'
+    compile 'io.netty:netty-all:4.0.33.Final'
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
