--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     compile 'io.netty:netty-all:4.0.33.Final'
+    compile 'org.pcollections:pcollections:2.1.2'
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
