--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,11 @@ group 'webchat'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
+mainClassName = 'ru.serce.ChatServer'
+applicationDefaultJvmArgs = ["-Xmx3G", "-Xms2G"]
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -20,7 +23,6 @@ repositories {
 
 dependencies {
     compile 'io.netty:netty-all:4.0.33.Final'
-    compile 'org.pcollections:pcollections:2.1.2'
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
